force-app/main/default/objects/ModelPricing__c/ModelPricing__c.object-meta.xml
<CustomObject>
    <label>ModelPricing</label>
    <nameField>
        <label>ModelPricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ModelPricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>