force-app/main/default/objects/ModelPricing__c/fields/Displacement__c.field-meta.xml
<CustomField>
    <fullName>Displacement__c</fullName>
    <label>Displacement</label>
    <length>12</length>
    <type>Text</type>
</CustomField>