force-app/main/default/objects/ModelPricing__c/fields/EmployeePrice__c.field-meta.xml
<CustomField>
    <fullName>EmployeePrice__c</fullName>
    <label>EmployeePrice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>