force-app/main/default/objects/ModelPricing__c/fields/RetailPrice__c.field-meta.xml
<CustomField>
    <fullName>RetailPrice__c</fullName>
    <label>RetailPrice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>